--- a/WebLogApp/views/weekly.html
+++ b/WebLogApp/views/weekly.html
@@ -10,25 +10,26 @@
     <div class="container">
         <div class="navigation">
             <a href="/monthly"><button>Go to Monthly Log</button></a>
+            <a href="/"><button>Sign out</button></a>
         </div>
         <div class="notification-container">
             <div>
-                <h5>Fields marked with * must be filled. These will auto-fill for the days.</h5>
+                <h5>Fields marked with * must be filled. These will auto-fill the date fields. For days off, leave fields empty.</h5>
             </div>
         </div>
         <form id="reportForm">
+            <input type="hidden" id="user_token" name="user_token" value="">
             <div class="day-container">
                 <div class="start-date-container">                     
                     <h2>Weekly Work Hours - LogTool</h2>
                     <label for="weekNumber" class="required">Week Number*:</label>
-                    <input type="number" id="weekNumber" min="1" max="53" required>
+                    <input type="number" id="weekNumber" name="week_number" min="1" max="53" required>
                     <label for="year" class="required">Year*:</label>
-                    <input type="number" id="year" min="1900" max="2100" required>
+                    <input type="number" id="year" name="year" min="1900" max="2100" required>
                     <button type="button" id="setWeekBtn">Set Week</button>
                     <div>
                         <h5>Set lunch break length.</h5>
-                        <input type="number" name="lunchBreakLength"id="lunchBreakLength" min="0.00" max="1.00" step="0.25">
-                        <button type="button" id="setLunchBreakLength">Set lunch break</button>
+                        <input type="number" name="lunchBreakLength" id="lunchBreakLength" min="0.00" max="1.00" step="0.25">
                   </div>
                   <div>
                     <h5>Set file name.</h5>
@@ -40,11 +41,13 @@
             <button id="addWeekBtn" type="button">Add a Week</button>
             <button id="deleteWeekBtn" type="button">Delete a Week</button>
             <button id="downloadBtn" type="button">Download CSV</button>
+            <button id="saveBtn" type="button">Save log file</button>
         </form>
     </div>
     <script src="/static/weeklypage.js"></script>
+</div>
     <div class="banner">
         <img src="/static/images/logos-english-all.jpg" alt="logos of all the participating organisations in AIMLearning.">
-    </div>    
+    </div> 
 </body>
 </html>
